feat: add workout done field on return and add reorder route
